# find_my_file

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CONTRIBUTING.md  CPPLINT.cfg  LICENSE  README.md  install.sh
.github/: instruction.md
.github/instructions/: README.instructions.md  architecture.instructions.md  commit-style.instructions.md  cpp-standards.instructions.md  refactory.instructions.md  tdd-cycle.instructions.md  testing.instructions.md  workflow.instructions.md
.github/workflows/: ci.yml
docs/: architecture.md  onnx-setup.md  semantic-search-quickstart.md  todos.md  todos_done.md
examples/: .findmyfilesrc
include/: command_line_parser.h  config_file.h  content_searcher.h  file_info.h  file_scanner.h  i_vector_store.h  ignore_patterns.h  logger.h  mock_embedding_provider.h  mock_vector_store.h  output_formatter.h  pattern_matcher.h  search_criteria.h  search_result.h  semantic_result.h  semantic_searcher.h
include/adapters/cli/: command_line_parser.h
include/adapters/presenters/: output_formatter.h
include/application/ports/: i_embedding_provider.h  i_vector_store.h  mock_embedding_provider.h  mock_vector_store.h
include/application/services/: pattern_matcher.h
include/application/use_cases/: file_scanner.h  semantic_searcher.h
include/domain/entities/: file_info.h  search_result.h  semantic_result.h
include/domain/value_objects/: search_criteria.h
include/infrastructure/ai/: image_caption_service.h  image_index_text_builder.h  image_indexer.h  image_log.h  image_ocr_service.h  local_embedding_provider.h  simple_tokenizer.h
include/infrastructure/config/: config_file.h
include/infrastructure/threading/: thread_pool.h
scripts/: download_model.py
src/: command_line_parser.cpp  config_file.cpp  content_searcher.cpp  file_info.cpp  file_scanner.cpp  ignore_patterns.cpp  logger.cpp  main.cpp  output_formatter.cpp  pattern_matcher.cpp  search_criteria.cpp  search_result.cpp  semantic_searcher.cpp  thread_pool.cpp
src/adapters/cli/: command_line_parser.cpp
src/adapters/presenters/: output_formatter.cpp
src/application/services/: content_searcher.cpp  ignore_patterns.cpp  pattern_matcher.cpp
src/application/use_cases/: file_scanner.cpp  semantic_searcher.cpp
src/domain/entities/: file_info.cpp  search_result.cpp
src/domain/value_objects/: search_criteria.cpp
src/infrastructure/ai/: image_caption_service.cpp  image_index_text_builder.cpp  image_indexer.cpp  image_log.cpp  image_ocr_service.cpp  local_embedding_provider.cpp
src/infrastructure/config/: config_file.cpp
src/infrastructure/logging/: logger.cpp
src/infrastructure/threading/: thread_pool.cpp
test/integrationtest/: run_all.sh  uc_config_file.sh  uc_content_search.sh  uc_ignore_patterns.sh  uc_image_index.sh  uc_logging.sh  uc_output_formats.sh  uc_parallel_scan.sh  uc_regex_search.sh  uc_semantic_search.sh  uc_semantic_search_cli.sh
tests/: test_config_file.cpp  test_content_searcher.cpp  test_file_info.cpp  test_file_scanner.cpp  test_ignore_patterns.cpp  test_logger.cpp  test_output_formatter.cpp  test_pattern_matcher.cpp  test_search_criteria.cpp  test_semantic_interfaces.cpp  test_semantic_searcher.cpp  test_thread_pool.cpp
tests/adapters/: test_output_formatter.cpp
tests/application/services/: test_content_searcher.cpp  test_ignore_patterns.cpp  test_pattern_matcher.cpp
tests/application/use_cases/: test_file_scanner.cpp  test_semantic_interfaces.cpp  test_semantic_searcher.cpp
tests/domain/entities/: test_file_info.cpp
tests/domain/value_objects/: test_search_criteria.cpp
tests/infrastructure/: test_config_file.cpp  test_local_embedding_provider.cpp  test_logger.cpp  test_simple_tokenizer.cpp  test_thread_pool.cpp
